# fast_zero_sync

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/versions/: 4ffd654dbb0b_add_updated_date_for_users_table.py  64eab0e42308_re_create_users_table.py  ceaa702b5a7e_create_users_table.py  d0e2de5dac1a_add_users_and_todos_on_database.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
